--- a/style.css
+++ b/style.css
@@ -18,4 +18,19 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 
 body {
     background-image: linear-gradient(120deg, #F6D365, #FDA085);
+    color: rgb(238, 238, 238);
+    font-family: 'Poppins', sans-serif;
+    min-height: 100vh;
+}
+
+header {
+    font-size: 1.5rem;
+}
+
+header,
+form {
+    min-height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
