--- a/style.css
+++ b/style.css
@@ -77,3 +77,17 @@ form button:hover {
     justify-content: space-between;
     align-items: center;
 }
+
+.todo li {
+    flex: 1; /*pushing the buttons next to each other */
+}
+
+.trash-btn,
+.complete-btn {
+    background: #FF6F47;
+    color: WHITE;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+}
