--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ form button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all 1s ease;
 }
 
 .todo li {
@@ -102,4 +103,15 @@ form button:hover {
 
 .todo-item {
     padding: 0rem 0.5rem;
+}
+
+.fa-trash,
+.fa-check {
+    pointer-events: none;
+}
+
+.completed {
+    text-decoration: line-through;
+    opacity: 0.5;
+
 }
